<resources>
    <string name="app_name">MotoHelper</string>
    <string name="InstNotif">Сервис Moto Helper Работает!</string>
    <string name="SpecifyIP">Указать IP сервера</string>
    <string name="MarkerListenRad">Радиус прослушивания маркеров (км)</string>
    <string name="MarkerListenType">Показывать уведомление, если добавлен маркер типа:</string>
    <string name="allowautorefresh" translatable="false">Обновоять автоматически</string>
    <string name="app_enter">Войти</string>
    <string name="app_register">Регистрация</string>
    <string name="title_activity_main_menu" translatable="false">Moto Helper</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="action_map">Карта</string>
    <string name="action_exit">Выход</string>
    <string name="Mark">Оставить отзыв</string>
    <string name="title_activity_helper_map">Map</string>
    <string name="addMarker" translatable="false">Добавить метку</string>
    <string name="shortdesc">Краткое описание</string>
    <string name="longdesc">Подробное описание</string>
    <string name="yourPhone">Телефон для связи с Вами</string>
    <string name="markerType">Тип метки</string>
    <string name="TMarker_corrupt">Поломка</string>
    <string name="TMarker_lookfriends">Ищу попутчиков</string>
    <string name="TMarker_accident">ДТП</string>
    <string name="All">Все</string>
    <string name="createMarker">Создать метку</string>
    <string name="Cancel">Отмена</string>
    <string name="Save">Сохранить</string>
    <string name="PasswordConfirm">Подтверждение</string>
    <string name="markerWatch">Просмотр</string>
    <string name="markerDelete">Удалить</string>
    <string name="setMarkerCurrentLocation">Поставить метку на текущем местоположении</string>
    <string name="MyAppTitle">Moto Helper</string>
    <string name="Auth">Авторизация</string>
    <string name="buttonEnterText">Войти</string>
    <string name="buttonRegText">Регистрация</string>
    <string name="regName">Имя</string>
    <string name="regFam">Фамилия</string>
    <string name="regMail">Логин</string>
    <string name="regPass">Пароль</string>
    <string name="btnReg">Зарегистрироваться</string>
    <string name="btnCancel">Отмена</string>
    <string name="spec_ip_text">Укажите IP адрес сервера</string>
    <string name="setipok" translatable="false">Ок</string>
    <string name="setipcancel">Отмена</string>
    <string name="StiIpCancel">Отмена</string>
    <string name="vk">Группа Вконтакте</string>
    <string name="remember">Запомнить меня</string>
    <string name="action_refresh">Обновить</string>
    <string name="action_view_markers" translatable="false">Посмотреть список маркеров</string>
    <string name="watch_markers">Список маркеров</string>
    <string name="EnterYourName">Введите Ваше имя</string>
    <string name="EnterYourSoName">Введите Вашу Фамилию</string>
    <string name="LoggingIn">Вход в систему</string>
    <string name="Map">Карта</string>
    <string name="Settings">Настройки</string>
    <string name="SocialNetworks">Социальные сети</string>
    <string name="Youtube">Youtube</string>
    <string name="FilterSettings">Настройки фильтрации</string>
    <string name="marker">Маркер</string>
    <string name="processing">Выполнение</string>
    <string name="marker_was_added">Маркер добавлен в базу данных</string>
    <string name="PhoneToCall">Телефон для связи</string>
    <string name="PasswordsIncorrect">Проверьте правильность заполнения формы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="MapSettings">Настройки карты</string>
    <string name="SettingsApp">Настройки приложения</string>
    <string name="MapAndMarkers">Карта и маркеры</string>
    <string name="MarkerSettings">Настройки отображения маркеров</string>
    <string name="showZoomBtn">Показывать кнопки масштаба</string>
    <string name="showZoomCompass">Показывать компасс</string>
    <string name="showMyLocationBtn">Показывать кнопку \"Мое местоположение\"</string>
    <string name="showCompass">Показывать компасс</string>
    <string name="unableLoadSettings">Не удалось загрузить настройки</string>
    <string name="Submit">Применить</string>
    <string name="Discard">Отмена</string>
    <string name="Sec">сек.</string>
    <string name="ButtonEnterText">Войти</string>
    <string name="MarkerWasAdded">Добавлен маркер</string>
    <string name="MarkerWasAddednearby">Недалеко добавлен новый маркер</string>
    <string name="SpecifyMarkerTypes">Укажите типы маркеров</string>
    <string name="action_settings">Настройки</string>
    <string name="btnRegistrationText">Регистрация</string>
    <string name="beginChat">Начать чат</string>
    <string name="btnAllowPushNotifications">Разрешить присылать уведомления</string>
    <string name="UserInvalid">Неверное имя пользователя или пароль</string>
    <string name="NoConnection">Невозможно подключиться к серверу</string>
    <string name="Actions">Действия</string>
    <string name="TOnlyMyMarkes">Только мои маркеры</string>
    <string name="ApplyingSettings">Применение настроек</string>
    <string name="CheckPasswordAndLogin">Введите логин и пароль!</string>
    <string name="CheckLogin">Введите логин</string>
    <string name="CheckPassword">Введите пароль</string>
    <string name="CheckPasswordAndConfirm">Введенные пароли не совпадают</string>
    <string name="CheckRegData">Проверьте правильность введенной информации</string>
    <string name="LoginTooShort">Логин должен быть длиннее 4х символов</string>
    <string name="PassTooShort">Пароль должен быть длиннее 4х символов</string>
    <string name="chooseMarkerType">Выберите тип маркера</string>
    <string name="ShortDescriptionRequired">Необходимо заполнить хотябы краткое описание и телефон</string>
    <string name="userPhoneRequired">Укажите контактный телефон. Он необходим для связи с Вами</string>
    <string name="OwnerOfMarkerIs">Маркер поставил пользователь -</string>
</resources>
