<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_vector_map"
            android:title="@string/MapAndMarkers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_vector_settings"
            android:title="@string/SettingsApp" />
        <item
            android:id="@+id/nav_filtering"
            android:icon="@drawable/ic_vector_filter"
            android:title="@string/FilterSettings" />
    </group>

    <item android:title="@string/SocialNetworks">
        <menu>
            <item
                android:id="@+id/nav_vk"
                android:icon="@drawable/ic_vkontakte"
                android:title="@string/vk" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube"
                android:title="@string/Youtube" />
        </menu>
    </item>
    <item android:title="@string/Actions">
        <menu>
            <item
                android:id="@+id/nav_refresh"
                android:icon="@drawable/vector_refresh"
                android:title="@string/action_refresh" />
        </menu>
    </item>

</menu>
