<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenu">
    <item
        android:id="@+id/actionSetMarkerOnMyLocation"
        android:orderInCategory="100"
        android:title="@string/setMarkerCurrentLocation"
        />

    <item
        android:id="@+id/action_mark"
        android:orderInCategory="100"
        android:title="@string/Mark"
        />
    <item
        android:id="@+id/VK"
        android:orderInCategory="100"
        android:title="@string/vk"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        />
    <item
        android:id="@+id/action_view_markers"
        android:orderInCategory="100"
        android:title="@string/action_view_markers"
        />
    <item
        android:id="@+id/Settings"
        android:orderInCategory="100"
        android:title="@string/action_settings_app"
        android:icon="@drawable/settings"
        android:showAsAction="always"
        />
    <item
        android:id="@+id/Filtration"
        android:orderInCategory="100"
        android:title="@string/action_settings_app"
        android:icon="@drawable/fltr"
        android:showAsAction="always"
        />


</menu>
