<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/shortdesc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/shortDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:background="@color/colorWhite"
                android:padding="5dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.04"
                android:text="@string/longdesc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/longDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="12dp"
                android:background="@color/colorWhite"
                android:padding="5dp"
                android:lines="3"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/rounded_light_button"
                android:text="@string/createMarker"
                android:textColor="#000" />

            <Button
                android:id="@+id/buttonAddMarkerCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_light_button"
                android:text="@string/Cancel"
                android:textColor="#000" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/corr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/TMarker_corrupt"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/lookf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/TMarker_lookfriends"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/accident"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TMarker_accident"
                    android:textSize="15sp" />

            </RadioGroup>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>